tests/semantic/valid/05_logical.src
fn main() -> bool {
    bool a = true;
    bool b = false;
    return a && !b;
}
