tests/semantic/invalid/15_return_type.src
fn main() -> bool {
    return 42;
}
